  attribute for a thread element.  The attribute indicates what GDB
  should print as the target ID of the thread, for example in the
  "info threads" command or when switching to the thread.

vFile:stat
  Previously, gdbserver incorrectly implemented this packet using
  lstat rather than stat.  This has now been corrected.  The
  documentation has also been clarified.

* MI changes

** The =library-unloaded event now includes the 'ranges' field, which
   has the same meaning as for the =library-loaded event.

** The =library-unloaded event now includes the 'still-in-use' field.
   This field is 'true' when a library is unloaded (removed from the
   inferior's list of loaded libraries), but the mapping within the
   inferior's address space is retained, as the library was mapped
   multiple times, and the same mapping was being reused.  In all
   other cases, this field will have the value 'false'.

* Support for stabs debugging format and the a.out/dbx object format is
  deprecated, and will be removed in GDB 18.

* A new configure option was added, allowing support for the compile
  subsystem to be disabled at configure time, in the form of
  --disable-gdb-compile.

* A new configure option was added, allowing support for DWARF debug
  information to be disabled at configure time.  The flag is
  --disable-gdb-dwarf-support.

* A new configure option was added, allowing support for mdebug/ecoff
  debug information to be disabled at configure time.  The flag to do
  that is --disable-gdb-mdebug-support.

* The Alpha target now supports target descriptions.

*** Changes in GDB 16

* Support for Nios II targets has been removed as this architecture
  has been EOL'ed by Intel.

* GDB now supports watchpoints for tagged data pointers (see
  https://en.wikipedia.org/wiki/Tagged_pointer) on amd64, such as the
  one used by the Linear Address Masking (LAM) feature provided by
  Intel.

* Debugging support for Intel MPX has been removed.  This includes the
  removal of