@@ -2169,9 +2169,20 @@ extern int target_remove_hw_breakpoint (gdbarch *gdbarch,
 
 extern int target_ranged_break_num_registers (void);
 
-/* Return non-zero if target knows the data address which triggered this
-   target_stopped_by_watchpoint, in such case place it to *ADDR_P.  Only the
-   INFERIOR_PTID task is being queried.  */
+/* Return a vector containing the data addresses which triggered this
+   target_stopped_by_watchpoint if the addresses are known.  If the
+   addresses are not known then an empty vector is returned.  Only the
+   INFERIOR_PTID task is being queried.
+
+   Some target, for example AArch64, can only watch ranges of memory,
+   e.g. 8 or 16 bytes.  As a result, many watchpoints could fall within any
+   single region.  In such a case, this method will return the address of
+   all possible watchpoints, and it is up to GDB core to select a suitable
+   watchpoint to display to the user, for example, by checking the value of
+   write watchpoints.  Or GDB core could tell the user that it is unable to
+   disambiguate between multiple read watchpoints (though this isn't
+   currently done).  */
+
 #define target_stopped_data_addresses(target) \
   (target)->stopped_data_addresses ()
 
